syntax = "proto3";
package sanlab.icecream.sharedlib.proto;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "common.proto";

option java_multiple_files = true;

message MediaDTO {
    optional string id = 1;
    optional string caption = 2;
    optional string filepath = 3;
    optional string mediaType = 4;
    optional google.protobuf.Timestamp createdOn = 5;
    optional string createdBy = 6;
    optional google.protobuf.Timestamp lastModifiedOn = 7;
    optional string lastModifiedBy = 8;
}

message MediaRequest {
    string mediaId = 1;
}

message MediaResponse {
    MediaDTO media = 1;
}

message MediaCollectionResponse {
    repeated MediaDTO mediaCollection = 1;
}

message AddressDTO {
    optional uint64 id = 1;
    optional string address = 2;
    optional string city = 3;
    optional string country = 4;
    optional string zipCode = 5;
    optional google.protobuf.Timestamp createdOn = 6;
    optional string createdBy = 7;
    optional google.protobuf.Timestamp lastModifiedOn = 8;
    optional string lastModifiedBy = 9;
}

message AddressRequest {
    uint64 addressId = 1;
}

message AddressResponse {
    AddressDTO address = 1;
}

message AddressCollectionResponse {
    repeated AddressDTO addressCollection = 1;
}

service LookupService {
    rpc getAllMedia(PageInfoRequest) returns (MediaCollectionResponse);
    rpc getMediaById(MediaRequest) returns (MediaResponse);
}
